WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59607
Fix build with libpng-1.5.1
https://bugs.webkit.org/show_bug.cgi?id=59607
Summary
Fix build with libpng-1.5.1
ojab
Reported
2011-04-27 08:31:18 PDT
Created
attachment 91286
[details]
patch In png_get_iCCP, the type of "profile" was changed from png_charpp to png_bytepp, so change type of profile from char* to unsigned char*. Don't know if I should " #if (PNG_LIBPNG_VER < 10500) ", let's try without it first.
Attachments
patch
(687 bytes, patch)
2011-04-27 08:31 PDT
,
ojab
no flags
Details
Formatted Diff
Diff
Conditionalized patch
(733 bytes, patch)
2011-04-27 08:40 PDT
,
ojab
levin
: review-
Details
Formatted Diff
Diff
Using real types
(1.50 KB, patch)
2011-04-27 23:13 PDT
,
ojab
no flags
Details
Formatted Diff
Diff
Using real types
(1.50 KB, patch)
2011-04-27 23:18 PDT
,
ojab
no flags
Details
Formatted Diff
Diff
Using png_char/png_byte types
(1.26 KB, patch)
2011-04-28 03:07 PDT
,
ojab
no flags
Details
Formatted Diff
Diff
Using png_charp/png_bytep types
(1.26 KB, patch)
2011-04-28 03:34 PDT
,
ojab
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
WebKit Review Bot
Comment 1
2011-04-27 08:35:10 PDT
Attachment 91286
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8508993
ojab
Comment 2
2011-04-27 08:40:41 PDT
Created
attachment 91289
[details]
Conditionalized patch
David Levin
Comment 3
2011-04-27 12:47:16 PDT
Comment on
attachment 91289
[details]
Conditionalized patch Needs changelog see
http://www.webkit.org/coding/contributing.html
David Levin
Comment 4
2011-04-27 12:47:40 PDT
Adding Peter in case he has any comments on this change.
Peter Kasting
Comment 5
2011-04-27 15:28:54 PDT
(In reply to
comment #4
)
> Adding Peter in case he has any comments on this change.
Is it possible for us to use the real types here, IOW "png_bytepp" in place of "unsigned char*"? I realize we'll still need a conditional, but it seems like we might as well match the API exactly.
ojab
Comment 6
2011-04-27 23:13:52 PDT
Created
attachment 91433
[details]
Using real types Something like that, I think. Is svn-create-patch necessary or I could simply use `git diff`, if I'm using git repo?
WebKit Review Bot
Comment 7
2011-04-27 23:15:27 PDT
Attachment 91433
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:1: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 8
2011-04-27 23:18:12 PDT
Attachment 91433
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8513634
ojab
Comment 9
2011-04-27 23:18:17 PDT
Created
attachment 91434
[details]
Using real types
WebKit Review Bot
Comment 10
2011-04-27 23:25:07 PDT
Attachment 91434
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8520246
ojab
Comment 11
2011-04-28 03:07:48 PDT
Created
attachment 91454
[details]
Using png_char/png_byte types This time created with svn-create-patch after reading libpng docs.
WebKit Review Bot
Comment 12
2011-04-28 03:22:53 PDT
Attachment 91454
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8514577
ojab
Comment 13
2011-04-28 03:34:42 PDT
Created
attachment 91462
[details]
Using png_charp/png_bytep types
WebKit Commit Bot
Comment 14
2011-04-28 07:23:16 PDT
Comment on
attachment 91462
[details]
Using png_charp/png_bytep types Clearing flags on attachment: 91462 Committed
r85181
: <
http://trac.webkit.org/changeset/85181
>
WebKit Commit Bot
Comment 15
2011-04-28 07:23:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug