2011-04-28  ojab  <ojab@ojab.ru>

Reviewed by David Levin.

        Fix build with libpng-1.5.1
        https://bugs.webkit.org/show_bug.cgi?id=59607

        * platform/image-decoders/png/PNGImageDecoder.cpp:
        (WebCore::readColorProfile):

Canonical link: https://commits.webkit.org/74892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85181 268f45cc-cd09-0410-ab3c-d52691b4dbfc